--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "nodemon": "^1.19.1"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
