Added server for handling measure data

--- a/server/.eslintrc
+++ b/server/.eslintrc
@@ -1,5 +1,11 @@
 {
     "extends": ["standard"],
+    "globals": {
+        "describe": true,
+        "it": true,
+        "before": true,
+        "after": true
+    },
     "rules": {
         "no-console": 0,
         "no-undef": 1,
