Added data process worker, added routes for devices

--- a/server/.vscode/launch.json
+++ b/server/.vscode/launch.json
@@ -29,5 +29,12 @@
             "program": "${workspaceFolder}/src/model/mongoDB/seeds/index.js",
             "envFile": "${workspaceFolder}/.env"
         },
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Process data",
+            "program": "${workspaceFolder}/data_processer.js",
+            "envFile": "${workspaceFolder}/.env"
+        },
     ]
 }
