Added plants database and events repository

--- a/server/.vscode/launch.json
+++ b/server/.vscode/launch.json
@@ -43,5 +43,12 @@
             "program": "${workspaceFolder}/watering_monitor.js",
             "envFile": "${workspaceFolder}/.env"
         },
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Insert plants",
+            "program": "${workspaceFolder}/src/model/mongoDB/seeds/insertPlants.js",
+            "envFile": "${workspaceFolder}/.env"
+        }
     ]
 }
