--- a/server/package.json
+++ b/server/package.json
@@ -26,7 +26,9 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "fastify": "^2.11.0",
+    "fastify-boom": "^0.1.0",
     "fastify-cors": "^3.0.0",
+    "fastify-swagger": "^2.5.1",
     "helmet": "^3.20.0",
     "moment": "^2.24.0",
     "mongoose": "^5.6.9",
